Fix home image slider being too short after navbar change

--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -14,7 +14,7 @@
 
 .bgimg-1 {
   position: relative;
-  height: calc(100% - 70px);
+  height: calc(100% - 62px);
 }
 
 .bgimg-2 {
